Doc/ANB/anbtk/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    PYTHON

Grammar

Rule 0     S' -> FSGram
Rule 1     FSGram -> Prods UNIVERSE FORMATS IGNORED
Rule 2     Prods -> Prod Prods
Rule 3     Prods -> Prod
Rule 4     Prod -> ID PP IDS PF
Rule 5     Prod -> ID PP REGEX
Rule 6     IDS -> IDS VIR IDgen
Rule 7     IDS -> IDgen
Rule 8     IDgen -> ID
Rule 9     IDgen -> IDm
Rule 10    IDgen -> IDv
Rule 11    IDS -> IDo

Terminals, with rules where they appear

FORMATS              : 1
ID                   : 4 5 8
IDm                  : 9
IDo                  : 11
IDv                  : 10
IGNORED              : 1
PF                   : 4
PP                   : 4 5
PYTHON               : 
REGEX                : 5
UNIVERSE             : 1
VIR                  : 6
error                : 

Nonterminals, with rules where they appear

FSGram               : 0
IDS                  : 4 6
IDgen                : 6 7
Prod                 : 2 3
Prods                : 1 2

Parsing method: LALR

state 0

    (0) S' -> . FSGram
    (1) FSGram -> . Prods UNIVERSE FORMATS IGNORED
    (2) Prods -> . Prod Prods
    (3) Prods -> . Prod
    (4) Prod -> . ID PP IDS PF
    (5) Prod -> . ID PP REGEX

    ID              shift and go to state 4

    FSGram                         shift and go to state 1
    Prods                          shift and go to state 2
    Prod                           shift and go to state 3

state 1

    (0) S' -> FSGram .



state 2

    (1) FSGram -> Prods . UNIVERSE FORMATS IGNORED

    UNIVERSE        shift and go to state 5


state 3

    (2) Prods -> Prod . Prods
    (3) Prods -> Prod .
    (2) Prods -> . Prod Prods
    (3) Prods -> . Prod
    (4) Prod -> . ID PP IDS PF
    (5) Prod -> . ID PP REGEX

    UNIVERSE        reduce using rule 3 (Prods -> Prod .)
    ID              shift and go to state 4

    Prod                           shift and go to state 3
    Prods                          shift and go to state 6

state 4

    (4) Prod -> ID . PP IDS PF
    (5) Prod -> ID . PP REGEX

    PP              shift and go to state 7


state 5

    (1) FSGram -> Prods UNIVERSE . FORMATS IGNORED

    FORMATS         shift and go to state 8


state 6

    (2) Prods -> Prod Prods .

    UNIVERSE        reduce using rule 2 (Prods -> Prod Prods .)


state 7

    (4) Prod -> ID PP . IDS PF
    (5) Prod -> ID PP . REGEX
    (6) IDS -> . IDS VIR IDgen
    (7) IDS -> . IDgen
    (11) IDS -> . IDo
    (8) IDgen -> . ID
    (9) IDgen -> . IDm
    (10) IDgen -> . IDv

    REGEX           shift and go to state 11
    IDo             shift and go to state 13
    ID              shift and go to state 9
    IDm             shift and go to state 14
    IDv             shift and go to state 15

    IDS                            shift and go to state 10
    IDgen                          shift and go to state 12

state 8

    (1) FSGram -> Prods UNIVERSE FORMATS . IGNORED

    IGNORED         shift and go to state 16


state 9

    (8) IDgen -> ID .

    PF              reduce using rule 8 (IDgen -> ID .)
    VIR             reduce using rule 8 (IDgen -> ID .)


state 10

    (4) Prod -> ID PP IDS . PF
    (6) IDS -> IDS . VIR IDgen

    PF              shift and go to state 17
    VIR             shift and go to state 18


state 11

    (5) Prod -> ID PP REGEX .

    ID              reduce using rule 5 (Prod -> ID PP REGEX .)
    UNIVERSE        reduce using rule 5 (Prod -> ID PP REGEX .)


state 12

    (7) IDS -> IDgen .

    PF              reduce using rule 7 (IDS -> IDgen .)
    VIR             reduce using rule 7 (IDS -> IDgen .)


state 13

    (11) IDS -> IDo .

    PF              reduce using rule 11 (IDS -> IDo .)
    VIR             reduce using rule 11 (IDS -> IDo .)


state 14

    (9) IDgen -> IDm .

    PF              reduce using rule 9 (IDgen -> IDm .)
    VIR             reduce using rule 9 (IDgen -> IDm .)


state 15

    (10) IDgen -> IDv .

    PF              reduce using rule 10 (IDgen -> IDv .)
    VIR             reduce using rule 10 (IDgen -> IDv .)


state 16

    (1) FSGram -> Prods UNIVERSE FORMATS IGNORED .

    $end            reduce using rule 1 (FSGram -> Prods UNIVERSE FORMATS IGNORED .)


state 17

    (4) Prod -> ID PP IDS PF .

    ID              reduce using rule 4 (Prod -> ID PP IDS PF .)
    UNIVERSE        reduce using rule 4 (Prod -> ID PP IDS PF .)


state 18

    (6) IDS -> IDS VIR . IDgen
    (8) IDgen -> . ID
    (9) IDgen -> . IDm
    (10) IDgen -> . IDv

    ID              shift and go to state 9
    IDm             shift and go to state 14
    IDv             shift and go to state 15

    IDgen                          shift and go to state 19

state 19

    (6) IDS -> IDS VIR IDgen .

    PF              reduce using rule 6 (IDS -> IDS VIR IDgen .)
    VIR             reduce using rule 6 (IDS -> IDS VIR IDgen .)

